log
Thu 18 Aug 2022 02:02:23 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:5: error: ‘lista’ undeclared (first use in this function)
   32 |     lista->inicio=NULL;
      |     ^~~~~
list.c:32:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a878d49
Thu 18 Aug 2022 02:02:48 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: expected identifier or ‘(’ before ‘->’ token
   32 |     List->inicio=NULL;
      |         ^~
list.c:33:9: error: expected identifier or ‘(’ before ‘>’ token
   33 |     List>fin=NULL;
      |         ^
Compilation failed
067305d
Thu 18 Aug 2022 02:03:10 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: expected identifier or ‘(’ before ‘->’ token
   32 |     List->inicio=NULL;
      |         ^~
list.c:33:9: error: expected identifier or ‘(’ before ‘->’ token
   33 |     List->fin=NULL;
      |         ^~
Compilation failed
ba57c3b
Thu 18 Aug 2022 02:04:49 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: expected identifier or ‘(’ before ‘=’ token
   32 |     List=NULL;
      |         ^
Compilation failed
39b3ec7
Thu 18 Aug 2022 02:05:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:6: error: expected expression before ‘List’
   32 |     *List=NULL;
      |      ^~~~
Compilation failed
83f1e1e
Thu 18 Aug 2022 02:05:10 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: expected identifier or ‘(’ before ‘=’ token
   32 |     List=NULL;
      |         ^
Compilation failed
d4b5f3c
Thu 18 Aug 2022 02:05:56 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |     List *lista=NULL;
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
f8b4318
Thu 18 Aug 2022 02:06:21 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9ce95f8
